# ToTheMoonTokens

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  docker-compose.vm.yml  docker-compose.yml  patch.js  patch_js.js  status.txt  test_api_call.py
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.nexus/: hooks.js  nexus-launch.env
bot/: auditor.py  main.py  safety.py  scanner.py  trader.py
docs/: ARCHITECTURE.md  CHANGELOG.md  (+21 more)
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/api/.nexus/: arc_jobs.json
services/api/src/tothemoon_api/: __init__.py  agent_chat.py  arc.py  arc_adapter.py  arc_mcp.py  audit.py  auth.py  backtesting.py  circle.py  config.py  database.py  db_models.py  demo_agent.py  guards.py  hackathon_summary.py  journal.py  main.py  market_data.py  models.py  news.py  nexus_jobs.py  observability.py  payments.py  quota.py  reputation.py  scalp.py  settlement.py  simulate.py  simulation.py  simulation_costs.py  strategies.py  tenancy.py
services/api/src/tothemoon_api/data/: nanopayments-batch-2026-04-23.json
services/api/src/tothemoon_api/migrations/: env.py
services/api/src/tothemoon_api/migrations/versions/: 0001_initial.py  0002_add_orgs.py  0003_multi_tenancy_quota.py  0004_simulated_trade_pnl.py  0005_copilot_bot.py  0006_observability_audit_context.py  0007_billing_webhook_events.py
services/api/src/tothemoon_api/routers/: billing.py  copilot.py  nanopayments.py  saas.py  tokens.py
services/api/src/tothemoontokens_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/api/tests/: conftest.py  test_agent_chat.py  test_agentic_strategy.py  test_api.py  test_api_simulate.py  test_api_tokens.py  test_arc.py  test_arc_adapter.py  test_auth.py  test_backlog_seed.py  test_backtesting.py  test_circle.py  test_config.py  test_database.py  test_database_startup.py  test_demo_agent.py  test_demo_e2e.py  test_e2e_guardrails.py  test_external_data.py  test_guardrails.py  test_hackathon_summary.py  test_journal.py  test_market_data.py  test_nexus_jobs.py  test_observability.py  test_payments.py  test_payments_list.py  test_phase3.py  test_phase4.py  test_phase6.py  test_rate_limit.py  test_redaction.py  test_reputation.py  test_research_features.py  test_settlement.py  test_simulation.py  test_smoke_external.py  test_sync_github_backlog.py
(+122 files in other folders)
